# openai-api-rust

./: .gitignore  Cargo.toml  README.md
examples/: chatloop.rs  story.rs
src/: lib.rs
