[package]
name = "openai-api-fork"
version = "0.1.5"
authors = ["Josh Kuhn <deontologician@gmail.com>"]
license-file = "LICENSE"
edition = "2018"
description = "OpenAI API library for rust"
homepage = "https://github.com/deontologician/openai-api-rust/"
repository = "https://github.com/deontologician/openai-api-rust/"
keywords = ["openai", "gpt3"]
categories = ["api-bindings", "asynchronous"]

[build]
rustdocflags = ["--all-features"]

[features]
default = ["async"]
async = ["surf/hyper-client"]

[dependencies]
thiserror = "1.0.31"
serde = { version = "1.0.136", features = ["derive"] }
derive_builder = "0.11.2"
log = "0.4.16"

serde_json = "1.0.80"
# Used by async feature
surf = { version = "2.3.2", optional = true, default-features = false }

[dev-dependencies]
mockito = "0.31.0"
maplit = "1.0.2"
tokio = { version = "1.18.0", features = ["full"] }
env_logger = "0.9.0"
serde_json = "1.0.80"
